# molly.tagger

./: .gitignore  LICENSE  README.md  llm_tag.py  pyproject.toml  schema.sql  update_tags.py  watcher.py
